# faiss-service

./: .gitignore  CMakeLists.txt  create_synthetic_index.py  environment.yml  query_server.py  query_server.sh  run_server.sh  setup.sh  start_server.sh
src/: CMakeLists.txt
src/protobuf/: faiss.grpc.pb.cc  faiss.grpc.pb.h  faiss.pb.cc  faiss.pb.h
